Removed unneded setting of index to kNothingSelected when an disabled option is selected r=blake, sr=buster Bug 57580